--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "build": "tsc",
     "test": "jest"
   },
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/prompt-sync": "^4.2.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
